[victor] note component wordwrap and icon fix

--- a/src/app/components/note/note.component.scss
+++ b/src/app/components/note/note.component.scss
@@ -42,21 +42,24 @@ form {
   flex-direction: column;
   justify-content: space-between;
   .first {
+    .push_pin {
+      margin-top: -3px;
+    }
     display: flex;
-    align-items: center;
+    // align-items: center;
+    margin-top: 10px;
     justify-content: space-between;
-    padding: 2px 5px 0px 20px;
+    padding: 0px 5px 0px 20px;
     input {
       width: 100%;
     }
     .title {
       font-family: "Open Sans", sans-serif;
       font-weight: 600;
+      width: 200px;
+      word-wrap: normal;
       font-size: larger;
     }
-  }
-  .firsttext {
-    display: none;
   }
   .second {
     padding: 2px 20px;
@@ -69,11 +72,8 @@ form {
       font-weight: 600;
     }
   }
-  .secondtext {
-    display: none;
-  }
   .third {
-    // margin-left: 10px;
+    margin-left: 8px;
     padding: 3px 15px 3px 10px;
     display: flex;
     align-items: center;
@@ -81,7 +81,7 @@ form {
     .icons {
       width: 100%;
       display: flex;
-      justify-content: space-between;
+      justify-content: space-evenly;
     }
     .close {
       font-family: "Open Sans", sans-serif;
